Fixed initial layout issues

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,7 @@
 // app global css in SCSS form
+body {
+    overflow:hidden;
+}
+.footerHeight {
+    height: 25px;
+}
